clean files, Dockerfile, Dockercompose, rename files

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -29,9 +29,17 @@
       <main>
         <!-- Initialize a select button -->
         <select id="selectButton"></select>
+        <!-- Yield trend chart -->
         <div class="chartContainer">
             <div id="yield" class="chart">
                 <text class="chartTitle">Yield trend</text>
+                <svg></svg>
+            </div>
+        </div>
+        <!-- Yield map -->
+        <div class="chartContainer">
+            <div id="yield_map" class="map">
+                <text class="chartTitle">Yield map for a given type of cereal and year</text>
                 <svg></svg>
             </div>
         </div>
